styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* font-family: Avenir LT Std; */
}
.container {
  max-width: 1440px;
  margin: 0 auto;
  /* min-height: 100vh; */
  display: flex;
  flex-direction: column;
}

/*  MAIN SECTION  */
main {
  /* flex: 1; */
  min-height: 100vh;
  display: flex;
  justify-content: space-between;
}

.logo img {
  width: 357px;
  height: 40px;
}

/* LEFT SIDE */
#homeView .left {
  /* flex: 1; */
  padding-left: 135px;
  padding-top: 50px;
  display: flex;
  flex-direction: column;
}
#homeView .left-content {
  flex: 1; /* takes remaining height */
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.left h1 {
  font-weight: 750;
  font-style: 95 Black;
  font-size: 48px;
  line-height: 100%;
  margin-bottom: 12px;
}

.left p {
  font-weight: 600;

  font-size: 20px;
  line-height: 100%;
  margin-bottom: 60px;
}

.buttons {
  max-width: 495px;
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

#homeView .buttons button {
  width: 230px;
  height: 50px;
  border-radius: 25px;
  border: 1px solid #fa4b00;
  background: transparent;
  color: #fa4b00;
  font-weight: 750;
  font-size: 16px;
  line-height: 100%;
  cursor: pointer;
}

#homeView .buttons button:hover {
  background: #fa4b00;
  color: #fff;
}

/* RIGHT SIDE */
#homeView .right {
  padding-inline: 35px;
  padding-top: 246px;
  padding-bottom: calc(246px - 60px);
  background: #f1eee8;
  display: flex;
  align-items: center;
  justify-content: center;
}

#homeView .right img {
  width: 531px;
  height: auto;
}

/* skill view */
/* LEFT SIDE */
#skillView .left {
  padding-left: 135px;
  padding-top: 50px;
  display: flex;
  flex-direction: column;
  width: 541px;
  background: #f8f8f8;
}
#skillView .left-content {
  flex: 1; /* takes remaining height */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.skill-logo img {
  width: 220px;
  height: auto;
}
.shadow img {
  width: 270px;
  height: auto;
}
#skillView .right {
  /* flex: 1; */
}
#skillView .right-content {
  flex: 1; /* takes remaining height */
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#skillView .left {
  width: 541px; /* fixed */
}

#skillView .right {
  flex: 1; /* take remaining space */
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 135px;
}

#skillView .right-content h2 {
  font-weight: 750;
  font-size: 48px;
  line-height: 100%;
  color: #000000;
  margin-bottom: 20px;
}
#skillView .right-content span {
  font-weight: 600;

  font-size: 20px;
  color: #9fa7ac;
  margin-bottom: 80px;
  line-height: 100%;
}

#skillView .right-content p {
  font-weight: 600;
  font-size: 20px;
  color: #000000;
  line-height: 100%;
  margin-bottom: 49px;
}

#skillView .right-content .buttons #yesBtn {
  background: #000000;
  color: #ffffff;
  width: 180px;
  height: 50px;
  border-radius: 25px;
  font-weight: 750;
  font-size: 20px;
  line-height: 100%;
  cursor: pointer;
}
#skillView .right-content .buttons #noBtn {
  background: #ffffff;
  color: #000000;
  width: 180px;
  height: 50px;
  border-radius: 25px;
  font-weight: 750;
  font-size: 20px;
  line-height: 100%;
  border: 1px solid #000000;
  cursor: pointer;
}

.progress-label {
  font-weight: 750;
  font-size: 16px;
  line-height: 100%;
  color: #494949;
  margin-bottom: 15px;
  margin-top: 130px;
}

.progress {
  height: 8px;
  width: 576px;
  background: #efefef;
  margin: 15px 0;
  border-radius: 10px;
}

.progress-fill {
  height: 100%;
  width: 0%;
  background: #494949;
  border-radius: 10px;
  transition: 0.3s;
}

/* end page */
/* LEFT SIDE */
.endPage-left {
  padding-left: 135px;
  padding-top: 50px;
  display: flex;
  flex-direction: column;
}
.endPage-left-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.endPage-left-content h1 {
  font-weight: 750;
  font-size: 48px;
  line-height: 100%;
  color: #000000;
  margin-bottom: 12px;
}
.endPage-left-content p {
  font-weight: 600;
  font-size: 20px;

  line-height: 100%;
  color: #000000;
  margin-bottom: 50px;
}
#endPage-skillLists {
  display: flex;
  gap: 30px;
  align-items: center;
}
#endPage-skillLists {
  display: flex;
  row-gap: 25px;
  column-gap: 30px;
  flex-wrap: wrap;
  margin-bottom: 121px;
}
.skill-row {
  display: flex;
  align-items: center;
  gap: 10px;
}
#endPage-skillLists span {
  font-weight: 750;
  font-size: 16px;
  line-height: 100%;
  color: #000000;
  white-space: nowrap;
}
#endPage-skillLists img {
  width: 9.3px;
  height: 7px;
}
.endPage-left-content {
  width: 509px;
}
.endPage-right {
  padding-inline: 35px;
  padding-top: 246px;
  padding-bottom: 275px;
  background: #f8f8f8;
  display: flex;
  align-items: center;
  justify-content: center;
}
#back-to-home {
  font-weight: 600;
  font-size: 20px;
  line-height: 100%;
  color: #fa4b00;
  text-decoration: none;
}
#back-to-home img {
  height: 10px;
  width: 10px;
}
/* ===== FOOTER ===== */
footer {
  background: #f2662e;
  color: #ffffff;
  padding-block: 20px;
  padding-left: 145px;
  font-family: Karla;
  font-weight: 400;
  font-size: 16px;
  line-height: 100%;
}

